Bug 46662 - FILEOPEN particular RTF document containing nested tables renders incorrectly
Summary: FILEOPEN particular RTF document containing nested tables renders incorrectly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: Other Windows (All)
: medium major
Assignee: Miklos Vajna
URL:
Whiteboard:
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2012-02-26 17:40 UTC by Alistair Leslie-Hughes
Modified: 2015-12-15 11:00 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document (49.11 KB, text/rtf)
2012-02-26 17:40 UTC, Alistair Leslie-Hughes
Details
RTF file that causes LibO Writer to crash (1.01 MB, application/rtf)
2012-02-29 06:27 UTC, Ivan
Details
ODT file to "save as" RTF file with LibreOffice 3.5.2.2 (31.01 KB, application/vnd.oasis.opendocument.text)
2012-04-07 06:31 UTC, droumanet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alistair Leslie-Hughes 2012-02-26 17:40:40 UTC
Created attachment 57691 [details]
Sample document

Open the attached RTF Document crashes Writer.
Comment 1 Rainer Bielefeld Retired 2012-02-26 21:37:18 UTC
NOT reproducible with "LibreOffice 3.5.0 German UI/Locale [Build-ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735] on German WIN7 Home Premium (64bit), Document can be opened form WIN Explorer  with right click without problems.
Comment 2 s-joyemusequna 2012-02-27 03:40:11 UTC
Works fine with Word 2007, LibO 3.3.4, and LibO 3.4.5.
Crashes with LibO 3.5.0. Tested on Windows XP.

This is a regression
Comment 3 Rainer Bielefeld Retired 2012-02-27 04:31:51 UTC
May be XP only? I can Reproduce the crash with 3.5.0 RC2 on WIN XP 32 bit on VirtualBox
Same with 3.5.1 RC1

@Michael:
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug
Comment 4 s-joyemusequna 2012-02-27 07:07:46 UTC
LibO 3.5.1 RC 1 crashes on Windows Vista 64 and on Windows XP (32 bit). So it is not Windows XP specific.
Comment 5 Michael Stahl 2012-02-27 07:09:54 UTC
assign 3.5 RTF import regressions to vmiklos please ;)
Comment 6 Miklos Vajna 2012-02-28 08:36:38 UTC
Reproduced with master, will have a look.
Comment 7 Not Assigned 2012-02-29 03:26:31 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=00859026749e005759ce4e7115b746b064cd902b

fdo#46662 fix RTF import of numbering levelnumbers
Comment 8 Miklos Vajna 2012-02-29 03:28:33 UTC
Closing, will backport the fix to -3-5 together with bug 45543 and bug 42465.
Comment 9 Ivan 2012-02-29 06:27:12 UTC
Created attachment 57807 [details]
RTF file that causes LibO Writer to crash
Comment 10 Ivan 2012-02-29 06:28:35 UTC
Same problem here.
Writer crashes on opening certain RTF document.
When I try to open document, progress bar first keeps showing opening progress, then stops, then program stops responding and crashes with standard Windows "Program has stopped working" error message box.

When opening the document, soffice.bin process starts consuming memory at terrific rate: from ~36Mb in idle up to 1.648Gb right before crash. It also causes high (up to 60%) CPU load on machine with E-350.

Tested on LibO 3.5.0 RC3.
Test configurations were the following:
1. Intel Core i5 2500k, 8Gb RAM
2. AMD E-350, 4Gb RAM
Both machines are running under Windows Professional x64 SP1.

The test file is included in the attachment.

I'm not really sure, but this issue may be related to Bug 33012 in LibO 3.3.0 RC2
Comment 11 Not Assigned 2012-02-29 07:43:16 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=44f7c5ddf9d730c899f480ca644ddc29c7de9dc6

Related: fdo#46662 fix RTF import of leveltext destination
Comment 12 Miklos Vajna 2012-02-29 07:46:29 UTC
Ivan,

This bugreport was about an incorrect handling of numberings, the
document you attached has no numbering in it at all, as far as I see. Please
don't use the same bug number for different issues, but open a new one, I'll
try to fix the issue there.

Thanks!
Comment 13 Not Assigned 2012-03-01 02:46:37 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7029ccec25bc0b15f9cea463ea3713e802eafc08

testcase for fdo#46662
Comment 14 Not Assigned 2012-03-20 04:17:41 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0361e92cb000371e6e3463a853b375bdeec984f5&g=libreoffice-3-5

Related: fdo#46662 fix RTF import of leveltext destination


It will be available in LibreOffice 3.5.2.
Comment 15 Jean-Baptiste Faure 2012-03-21 22:57:49 UTC
Hi Miklos,

Are you sure this bug is really fixed ? 
First bugdoc (https://bugs.freedesktop.org/attachment.cgi?id=57691) looks almost empty in LO 3.5.3 rc0+ (LibreOffice 3.5.3rc0+ Version ID : 3ca642e-a73d29c-73cb0b8-f269e46-b01560f) and master (LibreOffice 3.6.0alpha0+ Build ID: 08ba87c-49d3d39-e67b1bf-879ce36-638d9c) unlike in LO 3.3.4 and LO 3.4.5 under Ubuntu 11.10
I see no difference with LO 3.5.1.

Best regards. JBF
Comment 16 Miklos Vajna 2012-03-23 03:29:56 UTC
Hi JBF,

Ah, the bugreport originally was just about the crash, so I didn't notice there is a problem with the result of the import as well. Will check it.

Miklos
Comment 17 droumanet 2012-04-07 06:31:31 UTC
Created attachment 59621 [details]
ODT file to "save as" RTF file with LibreOffice 3.5.2.2

I've work on the ODT file. I need to send it in RTF format so I save it with "Save as..." function and choose RTF.
To check if the file is OK, I close LO3.5 and double-click on the new RTF file... then LO3.5.2.2 hangs !!!

Hope this would help to debug this problem... :)
Comment 18 Jean-Baptiste Faure 2012-04-14 02:21:04 UTC
(In reply to comment #17)
> Created attachment 59621 [details]
> ODT file to "save as" RTF file with LibreOffice 3.5.2.2
> 
> I've work on the ODT file. I need to send it in RTF format so I save it with
> "Save as..." function and choose RTF.
> To check if the file is OK, I close LO3.5 and double-click on the new RTF
> file... then LO3.5.2.2 hangs !!!
> 
> Hope this would help to debug this problem... :)

Hi David,
It is not clear if your difficulties with this file are related to this bug. When opening it in LO 3.5.3 rc0+ all accentuated characters are lost, so the problem seems to be in the odt not in the rtf. Please ask for help on fr users mailing list: http://fr.libreoffice.org/assistance/. You need to explain how this file has been made.

Best regards. JBF
Comment 19 Alistair Leslie-Hughes 2012-06-03 19:14:44 UTC
Thanks.

The crash no longer appears to happen with 3.5.4.
Comment 20 Robinson Tryon (qubit) 2015-12-15 11:00:13 UTC
Migrating Whiteboard tags to Keywords: (rtf_filter -> filter:rtf)
[NinjaEdit]