fdo#46662 fix RTF import of numbering levelnumbers

To handle stateful encodings, we process hex characters in one go for a
run. Levelnumbers of numberings should be an exception, since there the
special characters (here: 0x7, which is table cell end) have no special
meaning.